# pystringutils

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-pytest.yml
pystringutils/: __init__.py  cases.py
tests/: cases.py
